# abstract-vm

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake.yml
includes/: IOperand.hpp  lexer.hpp  operand.hpp  operandFactory.hpp  parser.hpp  vm.hpp
sources/: .operandFactory.cpp.swp  exceptions.cpp  lexer.cpp  main.cpp  operand.cpp  operandFactory.cpp  parser.cpp  vm.cpp
src/includes/: lexer.hpp  parser.hpp
src/sources/: lexer.cpp  main.cpp  parser.cpp
tests/: int8_overflow  int8_t-print.avm  modulo.avm  sample.avm
tests/files/: dump_types.avm  false_assertion.avm  float_times_int.avm  int8_overflow  int8_t-print.avm  modulo.avm  simple_push.avm  unknown_operation.avm
tests/sources/: assertionTests.cpp  basicTest.cpp  basicTests.cpp  negativeTests.cpp  overflowTests.cpp  typeComparisonTests.cpp
vm/includes/: IOperand.hpp  exceptions.hpp  lineInfos.hpp  operand.hpp  operandFactory.hpp  sign.hpp  vm.hpp
vm/sources/: exceptions.cpp  operand.cpp  operandFactory.cpp  vm.cpp
